--- a/project-a/index.html
+++ b/project-a/index.html
@@ -1,98 +1,103 @@
-<!-- 
-Template for IMA's Creative Coding Lab 
-
-Project A: Generative Creatures
-CCLaboratories Biodiversity Atlas 
--->
-
 <!DOCTYPE html>
 <html>
 
 <head>
-    <title>[ NAME OF YOUR CREATURE ]</title>
+    <title>Blobby nom nom</title>
 
-    <!-- allow special characters, including Arabic, Chinese, Korean, Japanese, etc. -->
     <meta charset="UTF-8">
-    <!-- link the style sheet -->
     <link rel="stylesheet" type="text/css" href="style.css">
-    <!-- import p5.js library -->
     <script src="https://cdn.jsdelivr.net/npm/p5@1.11.3/lib/p5.min.js"></script>
     <script>
-        // prevent scrolling when spacebar and arrow keys are pressed.
-        window.addEventListener("keydown", function (e) { if ([32, 37, 38, 39, 40].indexOf(e.keyCode) > -1) { e.preventDefault(); } }, false);
+        window.addEventListener("keydown", function (e) {
+            if ([32, 37, 38, 39, 40].indexOf(e.keyCode) > -1) {
+                e.preventDefault();
+            }
+        }, false);
     </script>
 </head>
 
 <body>
-    <!-- title -->
     <div id="title-wrapper">
-        <h1 class="headline black">MOLDY</h1>
+        <h1 class="headline black">Blobby nom nom</h1>
     </div>
 
-    <!-- main content -->
     <div id="main-wrapper">
-        <div id="p5-canvas-container">
-            <!-- This is where your p5 sketch will be appended and appear! -->
-        </div>
+        <div id="p5-canvas-container"></div>
+
         <div class="two-columns">
             <div class="left">
                 <h3 class="red">Scientific Name:</h3>
-                <p>MOLDY</p>
+                <p><strong>Blobby nom nom</strong></p>
 
                 <h3 class="red">Discovered by / at:</h3>
-                <p>Scientist's Name, Time of discovery</p>
+                <p>Discovered by student <strong>Luelle</strong> — somewhere between 2 AM and 4 AM while trying to “just make bacteria move” in p5.js. She has zero clue what exactly happened but it looked kinda alive, so yeah — accidental discovery!</p>
 
                 <h3 class="green">Family:</h3>
-                <p>This is part of the story telling of your project. Add the relevant information for the creature you
-                    discovered.</p>
+                <p>
+                    A one-of-a-kind digital organism found only in Luelle’s chaotic p5.js petri dish.  
+                    She probably combined noise(), a for loop, and sheer confusion to accidentally summon this thing.  
+                    When a human (you) touches the environment, a small penicillin-type mold emerges — aka *Blobby nom nom* — and starts eatin’ the surrounding bacteria.
+                </p>
             </div>
+
             <div class="right">
                 <h3 class="green">Habitat:</h3>
-                <p>Feel free to modify/add information as you want.</p>
+                <p>
+                    It lives in a noisy bacterial field made up of soft glowing blue strands (the background).  
+                    Those strands? That’s its food.  
+                    When it’s hungry, you’ll see it erase the bacteria around it in a lil soft halo.  
+                    Once the bacteria are all gone — boom, it stops growing. Full belly, nap time. 😴
+                </p>
 
                 <h3 class="green">Appearance:</h3>
-                <p>This text is part of the story telling of your project. You created this creature then you can give
-                    all the information about it.</p>
+                <p>
+                    A glowing blue blob that slowly expands in layers like jelly under water.  
+                    It has a faint aura that eats up the background within its glow radius.  
+                    When you drag it, it leaves smooth trails like slime being pulled across a microscope slide.
+                </p>
 
                 <h3 class="green">Key Characteristics:</h3>
                 <ul>
-                    <li>Flies in the dark.</li>
-                    <li>Eats metal.</li>
-                    <li>(keep them short!)</li>
-                    <li>...</li>
+                    <li>Feeds on nearby bacteria (the flowy noise background)</li>
+                    <li>Stops growing when it’s full</li>
+                    <li>Soft halo = digestive zone</li>
+                    <li>Follows mouse when dragged</li>
+                    <li>Possibly sentient? hard to tell tbh</li>
                 </ul>
             </div>
         </div>
+
         <div class="one-column">
             <p>
-                <span class="yellow">What we know so far about [ NAME OF YOUR CREATURE ]?</span>
-                The giraffe is a large African hoofed mammal belonging to the genus Giraffa. It is the tallest living
-                terrestrial animal and the largest ruminant on Earth. Traditionally, giraffes have been thought of as
-                one species, Giraffa camelopardalis, with nine subspecies. Most recently, researchers proposed dividing
-                them into up to eight extant species due to new research into their mitochondrial and nuclear DNA, as
-                well as morphological measurements. Seven other extinct species of Giraffa are known from the fossil
-                record. (This is from Wikipedia, write the story, history, facts, tales, myths, anecdotes about your
-                creature.)
-                <br>
-                <span class="yellow">Guidelines for human interaction with this creature</span> This text can double as
-                fictional part of your story, but could also include instructional aspects on how to interact with your
-                sketch above.
+                <span class="yellow">What we know so far about Blobby nom nom?</span><br><br>
+                It’s a self-growing noise-based lifeform that accidentally learned how to eat its own environment.  
+                Created from a simple for loop and noise(), it now behaves like a digital mold — expanding until it devours all bacteria within reach.  
+                Researchers (aka Luelle) hypothesize it feeds by absorbing the background’s noise energy.  
+                Once everything nearby is gone, it just… stops. Like, completely.  
+                No drama. Just chill. Until you spawn it again.<br><br>
+
+                <span class="yellow">Guidelines for human interaction with this creature</span><br>
+                1. Click to summon your own mold blob. <br>
+                2. Drag gently — it vibes with slow motion.<br>
+                3. Don’t panic if it stops moving. It’s probably digesting. <br>
+                4. If it disappears, just click again. Life finds a way.<br>
+                5. Do not try to feed it too fast. (It lags. And maybe cries.)<br><br>
+
+                *bloby nom nom* might be the first recorded case of an artificial organism developing hunger in code.  
+                Scientists are still arguing whether this counts as “life” or just bad variable naming.
             </p>
         </div>
     </div>
 
-    <!-- Footer -->
     <div id="footer" class="black">
-        <p>A CCLab project made by [Your Name] in [Current Semester]</p>
+        <p>A CCLab project made by <strong>Luelle Nguyen</strong> in <strong>Fall 2025</strong></p>
     </div>
 
-    <!-- Home: Link back to the ATLAS page-->
     <div id="home">
         <a href="https://cclab.work/atlas">Back to the ATLAS</a>
     </div>
 
-    <!-- Include your sketch.js file here -->
-    <script src="sketch.js" type="text/javascript"> </script>
+    <script src="sketch.js" type="text/javascript"></script>
 </body>
 
 </html>
