--- a/project-a/index.html
+++ b/project-a/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Blobby nom nom</title>
+    <title>bloby nom nom</title>
 
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -18,7 +18,7 @@
 
 <body>
     <div id="title-wrapper">
-        <h1 class="headline black">Blobby nom nom</h1>
+        <h1 class="headline black">bloby nom nom</h1>
     </div>
 
     <div id="main-wrapper">
@@ -27,7 +27,7 @@
         <div class="two-columns">
             <div class="left">
                 <h3 class="red">Scientific Name:</h3>
-                <p><strong>Blobby nom nom</strong></p>
+                <p><strong>bloby nom nom</strong></p>
 
                 <h3 class="red">Discovered by / at:</h3>
                 <p>Discovered by student <strong>Luelle</strong> — somewhere between 2 AM and 4 AM while trying to “just make bacteria move” in p5.js. She has zero clue what exactly happened but it looked kinda alive, so yeah — accidental discovery!</p>
@@ -36,7 +36,7 @@
                 <p>
                     A one-of-a-kind digital organism found only in Luelle’s chaotic p5.js petri dish.  
                     She probably combined noise(), a for loop, and sheer confusion to accidentally summon this thing.  
-                    When a human (you) touches the environment, a small penicillin-type mold emerges — aka *Blobby nom nom* — and starts eatin’ the surrounding bacteria.
+                    When a human (you) touches the environment, a small penicillin-type mold emerges — aka *bloby nom nom* — and starts eatin’ the surrounding bacteria.
                 </p>
             </div>
 
@@ -69,7 +69,7 @@
 
         <div class="one-column">
             <p>
-                <span class="yellow">What we know so far about Blobby nom nom?</span><br><br>
+                <span class="yellow">What we know so far about bloby nom nom?</span><br><br>
                 It’s a self-growing noise-based lifeform that accidentally learned how to eat its own environment.  
                 Created from a simple for loop and noise(), it now behaves like a digital mold — expanding until it devours all bacteria within reach.  
                 Researchers (aka Luelle) hypothesize it feeds by absorbing the background’s noise energy.  
