--- a/project-a/index.html
+++ b/project-a/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>bloby nom nom</title>
+    <title>Bloby nom nom</title>
 
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="style.css">
